--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   </head>
   <body>
 
+    <header class="header">
+      <div class="wrap">
+          <h1>Header</h1>
+          <nav class="menu">
+              <a href="#">Eeny</a>
+              <a href="#">Meeny</a>
+              <a href="#">Miny</a>
+              <a href="#">Moe</a>
+          </nav>
+      </div>
+  </header>
+
 <!-- 1個目のセクション -->
     <section id="first-block">
       <div class="title-container">
@@ -21,7 +33,7 @@
     </section>
 
 
-    <!-- ②個めのセクション -->
+
     <section id="second-block">
       <p class="info-title">
           About me
@@ -30,21 +42,75 @@
           <image src="images/bentente.jpg" class="event-ben"></image>
         
         <div class="info-text">
-          <ul class="profile">
-            <li>名前：梅村 剛史 (ウメムラ ツヨシ)</li>
-            <br>
-            <li>大学：中央大学 文学部 哲学専攻</li>
-            <br>
-            <li>趣味：ブログ等の物書き モノづくり </li>
-            <br>
-            <li>好きなものやこと：みんなで遊ぶ際のイベントを考えること。             
-            <br>
-            <br>
-            <li>苦手なものやこと：満員電車に乗ること(酔ってしまう) 
-          </ul>
+          <div class="subinfo-text">
+          <div class="info-text">
+            <div class="maintopic">
+              <p class="topic">名前</p>
+              <p class="detail">べんてん</p>
+            </div>
+            <div class="maintopic">
+              <p class="topic">大学</p>
+              <p class="detail">中央大学<br>文学部<br>哲学選考</p>
+            </div>
+          </div>
+
+          <div class="subinfo-text">
+            <div class="maintopic">
+              <p class="topic">趣味</p>
+              <p class="detail">ブログ等の物書き</p>
+              <p class="detail">モノづくり</p>
+              <p class="detail">プログラミング</p>
+            </div>
+            <div class="maintopic">
+              <p class="topic">好きな物やこと</p>
+              <p class="detail">古典集め</p>
+              <p class="detail">創意工夫のある遊び</p>
+              <p class="detail">幸せになるドッキリ</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <div class=black>a</div>
+
+    <section id="fifth-block">
+      <p class="subtitle">自己PR/経験の詳細
+      </p> 
+      <div class="power-container">
+        <div class="black-box">
+          <div class="doublett">
+            <span class="maintitle">経験1ー</span>
+            <br>
+            <span class="maintheme">周囲を巻き込み、<br>健康企画イベントの変革を主導。   </span>
+          </div>
+          <p class="font_8">学生団体の企画責任者として、歴史ある大学健康イベントを大きく刷新しました。従来のイベント内容は流行と大きく乖離があり、より参加者にとって適切なイベント内容を選択することが求められたためです。
+            <br><br>私は当時の伝統であった「身体管理」ではなく、「ストレス」を扱うことに決めました。なぜなら近年「ストレス」は身近な問題であると考えたためです。大きな紙にみんなで悩みを書いてスッキリする企画を考案し、スタッフを鼓舞し続けみんなで成功を掴み取りました。</p>
+        </div>
+        <div class="green-box">
+          <div class="doublett">
+            <span class="maintitle">経験2ー</span>
+            <br>
+            <span class="maintheme">溢れる興味のまま<br>UIUXにコンテストに初挑戦。</span>
+          </div>
+          <p class="font_8">未経験から２ヶ月で独自のアプリサービスを考案し、賞を受賞したことです。企画力を向上させ、自身の可能性を広げたいと考え挑戦しました。
+            目標をプロジェクトの最終発表会で賞を受賞することとし、新奇性をテーマに企画しました。しかしアプリサービスの飽和性から、画期的なアイディアを考える事は困難でした。
+            <br><br>そこで、企画段階では「タスクの優先順位設定」という未開拓市場に焦点を当て、企画段階では社会人50名に協力を仰いで、貪欲なニーズ調査を実施しました。
+            そして本番当日は、自分の作品を自信を持って発表致しました。
+            </p>
+        </div>
+        <div class="skyblue-box">
+          <div class="doublett">
+            <span class="maintitle">経験3ー</span>
+            <br>
+            <span class="maintheme">マーケティング担当として<br>長期インターン先の目標を達成</span>
+          </div>
+          <p class="font_8">長期インターン先のプログラミングスクールで達成困難であった入会目標を達成しました。1チーム6人のマーケティングリーダーを務め、3ヶ月間で50入会目標を設定しました。達成する為にリーチ数・説明会へのエントリー数と細かな目標数値を立て、その数値を達成するため具体的な施策をメンバーと議論しました。<br><br>その過程で泥臭くPDCAを回した結果、入会目標を達成することができ、入会数54を積むことができました。</p>
+  
+        </div>
+      </section>
+
+  
     <script src="main.js"></script>
   </body>
 </html>
