セクション追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <header class="header">
+    <!-- <header class="header">
       <div class="wrap">
           <h1>Header</h1>
           <nav class="menu">
@@ -20,12 +20,12 @@
               <a href="#">Moe</a>
           </nav>
       </div>
-  </header>
+  </header> -->
 
 <!-- 1個目のセクション -->
     <section id="first-block">
       <div class="title-container">
-        <h1>ポートフォリオサイト</h1>  
+        <h1>Exポートフォリオサイト</h1>  
         </h1>
         <br>
 
@@ -43,25 +43,18 @@
         
         <div class="info-text">
           <div class="subinfo-text">
-          <div class="info-text">
-            <div class="maintopic">
+            <div id="pro1" class="profilee">
               <p class="topic">名前</p>
-              <p class="detail">べんてん</p>
+              <p class="detailname">べんてん</p>
             </div>
-            <div class="maintopic">
+            <div id="pro2" class="profilee">
               <p class="topic">大学</p>
               <p class="detail">中央大学<br>文学部<br>哲学選考</p>
             </div>
           </div>
 
           <div class="subinfo-text">
-            <div class="maintopic">
-              <p class="topic">趣味</p>
-              <p class="detail">ブログ等の物書き</p>
-              <p class="detail">モノづくり</p>
-              <p class="detail">プログラミング</p>
-            </div>
-            <div class="maintopic">
+            <div id="pro3" class="profilee">
               <p class="topic">好きな物やこと</p>
               <p class="detail">古典集め</p>
               <p class="detail">創意工夫のある遊び</p>
@@ -72,45 +65,47 @@
       </div>
     </section>
 
-    <div class=black>a</div>
-
     <section id="fifth-block">
-      <p class="subtitle">自己PR/経験の詳細
+      <p class="subtitle">最近呼んで好きになった本
       </p> 
       <div class="power-container">
         <div class="black-box">
           <div class="doublett">
-            <span class="maintitle">経験1ー</span>
+            <span class="maintitle">書籍1ー</span>
             <br>
-            <span class="maintheme">周囲を巻き込み、<br>健康企画イベントの変革を主導。   </span>
+            <span class="maintheme">『街場の芸術論』<br>内田樹</span>
           </div>
-          <p class="font_8">学生団体の企画責任者として、歴史ある大学健康イベントを大きく刷新しました。従来のイベント内容は流行と大きく乖離があり、より参加者にとって適切なイベント内容を選択することが求められたためです。
-            <br><br>私は当時の伝統であった「身体管理」ではなく、「ストレス」を扱うことに決めました。なぜなら近年「ストレス」は身近な問題であると考えたためです。大きな紙にみんなで悩みを書いてスッキリする企画を考案し、スタッフを鼓舞し続けみんなで成功を掴み取りました。</p>
+          <p class="font_8">「ファン」というのは「ファンを増やすことをその主務とする人」のことです。<br><br>こんな言葉からわかるよう、この書籍は客観性を意識した論文ではなく、日本を代表する思想家、武道家である内田氏の芸術論です。三島由紀夫から始まり宮崎駿氏、村上春樹氏の作品を丁寧に考察していきます。</p>
         </div>
         <div class="green-box">
           <div class="doublett">
-            <span class="maintitle">経験2ー</span>
+            <span class="maintitle">書籍2ー</span>
             <br>
-            <span class="maintheme">溢れる興味のまま<br>UIUXにコンテストに初挑戦。</span>
+            <span class="maintheme">『たった一人の熱狂』<br>見城徹</span>
           </div>
-          <p class="font_8">未経験から２ヶ月で独自のアプリサービスを考案し、賞を受賞したことです。企画力を向上させ、自身の可能性を広げたいと考え挑戦しました。
-            目標をプロジェクトの最終発表会で賞を受賞することとし、新奇性をテーマに企画しました。しかしアプリサービスの飽和性から、画期的なアイディアを考える事は困難でした。
-            <br><br>そこで、企画段階では「タスクの優先順位設定」という未開拓市場に焦点を当て、企画段階では社会人50名に協力を仰いで、貪欲なニーズ調査を実施しました。
-            そして本番当日は、自分の作品を自信を持って発表致しました。
+          <p class="font_8">幻冬舎社長の見城さんの渾身の一冊。一見すると極めてスポ魂＆精神論であり、これを従業員に押し付けると労働基準法に反してしまうような過激な主張も見られる。しかしよく考えると非常に内省的、客観的であり、そこを人に求めずあくまで自身のスタンスとして述べられている点が非常に心地よい。<br><br>私は元気がなくなったときに読んでいるが、本当に力が湧き、明日への活力を見出すことができる。
             </p>
         </div>
         <div class="skyblue-box">
           <div class="doublett">
-            <span class="maintitle">経験3ー</span>
+            <span class="maintitle">書籍3ー</span>
             <br>
-            <span class="maintheme">マーケティング担当として<br>長期インターン先の目標を達成</span>
+            <span class="maintheme">父が娘に語る〜経済の話<br>バルファキス</span>
           </div>
-          <p class="font_8">長期インターン先のプログラミングスクールで達成困難であった入会目標を達成しました。1チーム6人のマーケティングリーダーを務め、3ヶ月間で50入会目標を設定しました。達成する為にリーチ数・説明会へのエントリー数と細かな目標数値を立て、その数値を達成するため具体的な施策をメンバーと議論しました。<br><br>その過程で泥臭くPDCAを回した結果、入会目標を達成することができ、入会数54を積むことができました。</p>
+          <p class="font_8">ギリシャの財務大臣を務めていたバルファキスさんによる非常に面白く、文芸的な一冊。経済というそのものから論じるのではなく、卑近な例であったり、一見関係なさそうな諸分野から具体的に紐解いていく流れも、物事を教える身としては非常に参考になるばかり。<br><br>ぜひ経済に興味がある人は一読してみることを強く推奨する。
+          </p>
   
         </div>
       </section>
 
+
+      <footer>
+        <small>© 2021 BT</small>
+     </footer>
   
-    <script src="main.js"></script>
+       <!-- ②個めのセクション -->
+
+
+       <script src="./main.js"></script>
   </body>
 </html>
