セクション追加

--- a/index.html
+++ b/index.html
@@ -10,31 +10,28 @@
   </head>
   <body>
 
-    <!-- <header class="header">
-      <div class="wrap">
-          <h1>Header</h1>
-          <nav class="menu">
-              <a href="#">Eeny</a>
-              <a href="#">Meeny</a>
-              <a href="#">Miny</a>
-              <a href="#">Moe</a>
-          </nav>
-      </div>
-  </header> -->
 
-<!-- 1個目のセクション -->
+    
+    <header>
+      <p class="header-title">
+        <b>Webプログラミング</b>
+      </p>
+    </header>
+    <!-- 1個目のセクション -->
     <section id="first-block">
       <div class="title-container">
         <h1>Exポートフォリオサイト</h1>  
-        </h1>
-        <br>
+      </h1>
+      <br>
+      
+    </div>
+  </section>
 
-      </div>
-    </section>
-
-
-
-    <section id="second-block">
+</div>
+  
+  
+  
+  <section id="second-block">
       <p class="info-title">
           About me
       </p>
